apps/ghost/base/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-mysql
spec:
  selector:
    matchLabels:
      app: ghost-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: ghost-mysql
        app.kubernetes.io/name: ghost-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:9.4.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: ghost-mysql-storage
      volumes:
        - name: ghost-mysql-storage
          emptyDir: {}
