apps/ghost/base/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  template:
    spec:
      containers:
      - name: ghost
        resources:
          requests:
            cpu: "150m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ghost-mysql
spec:
  template:
    spec:
      containers:
      - name: mysql
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "2Gi"
