apps/ghost/base/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-metrics
  labels:
    app: ghost
spec:
  ports:
  - name: http
    port: 2368
    targetPort: 2368
  selector:
    app: ghost
