apps/ghost/base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-mysql
spec:
  selector:
    app.kubernetes.io/name: ghost-mysql
  ports:
    - port: 3306
      targetPort: 3306
