apps/ghost/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app.kubernetes.io/name: ghost
  ports:
    - protocol: TCP
      port: 2368
      targetPort: 2368
