apps/ghost/base/networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}         # all pods in this namespace
  policyTypes:
    - Ingress
    - Egress
